# SmartSpeaker

./: .gitignore  .pre-commit-config.yaml  DevNotes.md  README.md  pyproject.toml  requirements.txt  run.py
app/: smart_speaker.py
app/utils/: capture_audio.py  speech_to_text.py  text_to_gpt.py  text_to_speech.py
