[tool.poetry]
name = "smartspeaker"
version = "0.1.0"
description = "Iterative smart speaker component project"
authors = ["Maxwell Thorpe"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
